fix: blog sidebar overflowing on 768<w<1024

--- a/alvaro-cuesta.github.io/src/index.css
+++ b/alvaro-cuesta.github.io/src/index.css
@@ -71,7 +71,7 @@ article > header {
   gap: var(--pico-grid-column-gap);
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   .flex-responsive {
     flex-direction: column;
     gap: var(--pico-grid-row-gap);
